# sibs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  TODOs.md  build.sibs  build.sibs_  common.sibs  spec.md  tasks.sibs
app/: Cargo.toml
app/cli/: Cargo.toml
app/cli/src/: error.rs  logs.rs  main.rs  script.rs
app/cli/src/actions/: component.rs  help.rs  lsp.rs  mod.rs  scenario.rs  task.rs  version.rs
app/cli/src/params/: lsp.rs  mod.rs  sessions.rs
app/lsp/: Cargo.toml
app/lsp/src/: lib.rs
app/lsp/src/semantic/: mod.rs
app/scenario/: Cargo.toml
app/scenario/src/: error.rs  lib.rs  scenario.rs
asttree/: Cargo.toml
asttree/src/: lib.rs  linking.rs  lookup.rs  metadata.rs  targets.rs
asttree/src/cfm/: mod.rs
asttree/src/cfm/gatekeeper/: mod.rs  proptests.rs
asttree/src/cfm/skip/: mod.rs  proptests.rs
asttree/src/declaration/: mod.rs
asttree/src/declaration/argument_declaration/: mod.rs  proptests.rs
asttree/src/declaration/closure/: mod.rs  proptests.rs
asttree/src/declaration/closure_declaration/: mod.rs  proptests.rs
asttree/src/declaration/function_declaration/: mod.rs  proptests.rs
asttree/src/declaration/include_declaration/: mod.rs  proptests.rs
asttree/src/declaration/module_declaration/: mod.rs  proptests.rs
asttree/src/declaration/variable_declaration/: mod.rs  proptests.rs
asttree/src/declaration/variable_name/: mod.rs
asttree/src/declaration/variable_type/: mod.rs  proptests.rs
asttree/src/declaration/variable_type_declaration/: mod.rs  proptests.rs
asttree/src/declaration/variable_variants/: mod.rs  proptests.rs
asttree/src/expression/: mod.rs
asttree/src/expression/accessor/: mod.rs  proptests.rs
asttree/src/expression/binary_exp/: mod.rs  proptests.rs
asttree/src/expression/binary_exp_group/: mod.rs  proptests.rs
asttree/src/expression/binary_exp_seq/: mod.rs  proptests.rs
asttree/src/expression/binary_op/: mod.rs  proptests.rs
asttree/src/metadata/: mod.rs  proptests.rs
asttree/src/miscellaneous/: mod.rs
asttree/src/root/: mod.rs
asttree/src/root/anchor/: mod.rs
asttree/src/statement/: mod.rs
asttree/src/value/: mod.rs
cli/: Cargo.toml  spec.md
cli/src/: TODO.md  main.rs
cli/src/cli/: error.rs  mod.rs  tests.rs
cli/src/elements/: accessor.rs  block.rs  call.rs  closure.rs  comment.rs  component.rs  executing.rs  formation.rs  function.rs  gatekeeper.rs  ids.backup.rs  ids.rs  interfaces.rs  md.rs  meta.rs  mod.rs  optional.rs  ppm.rs  proptests.rs  range.rs  ref.rs  reference.rs  requirements.rs  task.rs  tests.rs  values.rs  verification.rs
cli/src/error/: mod.rs
cli/src/executors/: api.rs  error.rs  get_os.rs  import.rs  mod.rs  os.rs  repeat.rs  store.rs
cli/src/functions/: api.rs  error.rs  mod.rs  store.rs
cli/src/inf/: any.rs  mod.rs  trace.rs
cli/src/reader/: chars.rs  error.rs  ids.rs  map.rs  maps.rs  mod.rs  sources.rs  tests.rs  variables.rs  words.rs
cli/src/runners/: mod.rs
cli/src/tests/: formation.sibs
diagnostics/: Cargo.toml
diagnostics/src/: lib.rs
diagnostics/src/error/: mod.rs
diagnostics/src/link/: mod.rs  token.rs
diagnostics/src/srcs/: mod.rs
engine/: Cargo.toml
engine/asttree/src/: diagnostic.rs  lib.rs  linking.rs
engine/cli/: Cargo.toml
engine/cli/src/: error.rs  main.rs  scenario.rs  script.rs
engine/common/: Cargo.toml
engine/diagnostics/src/: lib.rs
engine/driver/: Cargo.toml
engine/driver/src/: completion.rs  error.rs  errors.rs  lib.rs  location.rs  locator.rs  positioning.rs
engine/functions/: Cargo.toml
engine/functions/src/: lib.rs
engine/interpreter/src/: lib.rs
engine/lexer/src/: error.rs  lib.rs
engine/parser/: Cargo.toml
engine/parser/src/: lib.rs  paths.rs  read.rs
engine/runtime/: Cargo.toml  build.rs
engine/runtime/src/: lib.rs
engine/semantic/: Cargo.toml
engine/semantic/src/: lib.rs  tests.rs  token.rs
engine/support/docs/: Cargo.toml
engine/support/term/: Cargo.toml
engine/tests/: playground.sibs
engine/tests/playground/: main.sibs  nested.sibs  test.sibs
funcs/: Cargo.toml
funcs/src/: arg.rs  desc.rs  lib.rs  store.rs
funcs/src/error/: mod.rs
functions/: Cargo.toml  extended.rs
functions/src/: lib.rs
functions/src/embedded/: mod.rs
functions/src/imported/: mod.rs
functions/src/utils/: mod.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  tests.rs
interpreter/src/ast/: conflict.rs  link.rs  mod.rs  proptests.rs  read.rs  tests.rs
interpreter/src/conflict/: mod.rs
interpreter/src/error/: mod.rs
interpreter/src/interest/: mod.rs
interpreter/src/lexer/: error.rs  lexer.rs  mod.rs
interpreter/src/parser/: interest.rs  mod.rs  nodes.rs  read.rs
interpreter/src/runtime/: mod.rs
interpreter/src/tests/: helpers.rs  mod.rs
interpreter/src/utils/: logs.rs  mod.rs
lexer/: Cargo.toml  TODOs.md
lexer/src/: error.rs  lib.rs
lexer/src/tests/: gens.rs  proptest.rs  proptests.rs  runners.rs
lexer/src/token/: conflict.rs  interest.rs  keyword.rs  kind.rs  length.rs  link.rs  mod.rs  position.rs  read.rs  tokens.rs
parser/: Cargo.toml
parser/src/: conflict.rs  interest.rs  lib.rs  nodes.rs  read.rs
parser/src/ast/: conflict.rs  link.rs  metadata.rs  mod.rs  tests.rs
parser/src/error/: mod.rs
parser/src/parser/: conflict.rs  interest.rs  mod.rs  read.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/declaration/: mod.rs
runtime/src/error/: mod.rs
runtime/src/fns/: arg.rs  ctx.rs  entity.rs  mod.rs  store.rs
runtime/src/rt/: api.rs  mod.rs
runtime/src/scope/: mod.rs
runtime/src/scopes/: api.rs  mod.rs  parent.rs  scope.rs  store.rs
runtime/src/spawner/: mod.rs  status.rs
runtime/src/ty/: mod.rs
runtime/src/tys/: table.rs
runtime/src/value/: mod.rs
semantic/: Cargo.toml
semantic/src/: lib.rs  tests.rs
semantic/src/ast/: mod.rs
semantic/src/context/: mod.rs
semantic/src/data_type/: mod.rs  refs.rs  values.rs
semantic/src/error/: mod.rs
semantic/src/test/: embedded_fns.rs  mod.rs
semantic/src/type_context/: mod.rs
support/importer/: Cargo.toml
support/importer/src/: lib.rs  opt.rs  refs.rs
(+2173 files in other folders)
