[workspace]
resolver = "2"
members = [
    "lexer", 
    "asttree",
    "parser",
    "diagnostics",
    "semantic",
    "funcs",
    "interpreter",
    "common",
    "support/boxed"
]

[workspace.dependencies]
enum_ids = "0.5"
thiserror = "2.0"
uuid = "1.8"
proptest = "1.4"
paste = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
