[workspace]
resolver = "2"
members = [
    "lexer", 
    "asttree",
    "parser",
    "diagnostics",
    "semantic",
    "interpreter",
    "common",
    "runtime",
    "functions",
    "support/boxed",
    "support/importer"
]

[workspace.dependencies]
enum_ids = "0.6"
thiserror = "2.0"
uuid = "1.8"
proptest = "1.4"
paste = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
tokio-util = "0.7"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "process", "sync", "macros"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
indicatif = "0.17"
indexmap = "2.7"
