[workspace]
resolver = "2"
members = [
    "cli",
    "lsp",
    "scenario"
]

[workspace.dependencies]
enum_ids = "0.7"
thiserror = "2.0"
proptest = "1.4"
paste = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
tokio-util = "0.7"
tokio = "1.44"
tower-lsp = "0.20"
uuid = "1.16"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.15"
indicatif = "0.17"
indexmap = "2.7"
rand = "0.9"
futures = "0.3"
bstorage = "0.2"
fshasher = "0.3"
serde = "1.0"
blake3 = "1.4"
terminal_size = "0.4"
regex = "1.10"
