[package]
name = "asttree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptests = [
    "proptest"
]

[dependencies]
enum_ids = "0.5"
lexer = { path = "../lexer" }
thiserror = "2.0"
proptest = { version = "1.4", optional = true }

[dependencies.uuid]
version = "1.8"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
proptest = "1.4"