[package]
name = "sibs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
indicatif = "0.17.7"
regex = "1.10.3"
terminal_size = "0.3.0"
thiserror = "1.0.50"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "sync", "macros"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7", features = ["codec"] }
importer = { path = "../importer" }
futures = "0.3.30"
chrono = "0.4.38"
bstorage = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.5.3"
fshasher = "0.3.1"
hashbrown = "0.15.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
proptest = "1.4.0"
rand = "0.8.5"
env_logger = "0.11.5"
log = "0.4.22"
strum = "0.26"
strum_macros = "0.26"
paste = "1.0.15"
