[workspace]
resolver = "2"
members = [
    "lexer", 
    "asttree",
    "parser",
    "diagnostics",
    "semantic",
    "interpreter",
    "common",
    "runtime",
    "functions",
    "driver",
    "support/boxed",
    "support/docs",
    "support/importer",
    "support/term",
    "tests/cmds/test_utils",
    "tests/cmds/exit",
    "tests/cmds/noise"
]

[workspace.dependencies]
enum_ids = "0.7"
thiserror = "2.0"
uuid = "1.8"
proptest = "1.4"
paste = "1.0"
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
tokio-util = "0.7"
tokio = "1.42"
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
console = "0.16"
indicatif = "0.18"
indexmap = "2.7"
rand = "0.9"
futures = "0.3"
bstorage = "0.2"
fshasher = "0.3"
serde = "1.0"
blake3 = "1.4"
terminal_size = "0.4"
regex = "1.10"
brec = "0.2"
chrono = "0.4"