[package]
name = "functions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror.workspace = true
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }
runtime = { path = "../runtime" }
boxed = { path = "../support/boxed" }
importer = { path = "../support/importer" }
diagnostics = { path = "../diagnostics" }
paste.workspace = true

