[package]
name = "lexer"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = "Parse income text to Tokens. Lexer is a part of SIBS"
license = "Apache-2.0"
repository = "https://github.com/icsmw/sibs.git"
homepage = "https://github.com/icsmw/sibs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proptests = [
    "proptest"
]

[dependencies]
thiserror = "1.0"
enum_ids = "0.2"
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"

