[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_ids = "0.5"
lexer = { path = "../lexer" }
asttree = { path = "../asttree" }
diagnostics = { path = "../diagnostics" }
thiserror = "2.0"

[dependencies.uuid]
version = "1.8"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
lexer = { path = "../lexer", features = ["proptests"] }
asttree = { path = "../asttree", features = ["proptests"] }
proptest = "1.4"
paste = "1.0"
