[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum_ids = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }

lexer = { path = "../lexer" }
asttree = { path = "../asttree" }
diagnostics = { path = "../diagnostics" }

[dev-dependencies]

lexer = { path = "../lexer", features = ["proptests"] }
asttree = { path = "../asttree", features = ["proptests"] }
proptest = "1.4"
paste = "1.0"
