[package]
name = "semantic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum_ids = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }

asttree = { path = "../asttree" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
common = { path = "../common" }
