[package]
name = "functions"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = ""
license = "Apache-2.0"
repository = "https://github.com/icsmw/sibs.git"
homepage = "https://github.com/icsmw/sibs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror.workspace = true
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }
paste.workspace = true
fshasher.workspace = true
serde = { workspace = true , features = ["derive"] }
blake3.workspace = true
bstorage.workspace = true

runtime = { path = "../runtime" }
boxed = { path = "../support/boxed" }
docs = { path = "../support/docs" }
importer = { path = "../support/importer" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }

