[package]
name = "semantic"
version = "0.1.0"
edition = "2021"
authors = ["d.astafyev@outlook.com"]
description = ""
license = "Apache-2.0"
repository = "https://github.com/icsmw/sibs.git"
homepage = "https://github.com/icsmw/sibs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum_ids.workspace = true
thiserror.workspace = true
uuid = { workspace = true , features = ["fast-rng", "macro-diagnostics", "v4"] }

asttree = { path = "../asttree" }
diagnostics = { path = "../diagnostics" }
lexer = { path = "../lexer" }
common = { path = "../common" }
parser = { path = "../parser" }
runtime = { path = "../runtime" }
functions = { path = "../functions" }

[dev-dependencies]
lexer = { path = "../lexer", features = ["proptests"] }
asttree = { path = "../asttree", features = ["proptests"] }
proptest.workspace = true
paste.workspace = true